# dungeon-crawler-engine

./: CMakeLists.txt  README.md
include/: constant.h  constants.h  defines.h  externs.h  mutable.h  struct.h  structs.h
lib/: CMakeLists.txt
lib/file_logic/: CMakeLists.txt  file_logic.c  file_logic.h
lib/game_logic/: CMakeLists.txt  game_logic.c  game_logic.h
lib/text_utils/: CMakeLists.txt  text_utils.c  text_utils.h  utils.c  utils.h
lib/utils/: CMakeLists.txt  utils.c
source/: CMakeLists.txt  main.c
src/: CMakeLists.txt  file.c  file.h  game.c  game.h  main.c  util.c  util.h
